# keras-hub

./: .github_push_marker  .gitignore  .pre-commit-config.yaml  API_DESIGN.md  API_DESIGN_GUIDE.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  CONTRIBUTING_MODELS.md  LICENSE  LITERTLM_RESUME.md  MODEL_CONTRIBUTION_GUIDE.md  PR_DESCRIPTION.md  PR_Summary_Tokenizer_Fix.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY.md  SESSION_CONTEXT.md  STYLE_GUIDE.md  Tokenizer_Fix_Explanation.md  Tokenizer_Fix_Explanation.txt  api_gen.py  bert_tiny_uncased_en_sst2_training.ipynb  build.py  conftest.py  convert_llama3_checkpoints.py.1  coverage.json  current_problem.ipynb  debug_object_detection.py  e2e_test.py  openvino_excluded_concrete_tests.txt  openvino_excluded_tests.txt  openvino_supported_tests.txt  patch_tokenizers.py  pip_build.py  pyproject.toml  requirements-common.txt  requirements-jax-cuda.txt  requirements-macos-m1.txt  (+13 more)
keras_nlp/: LICENSE  README.md  __init__.py  api_export.py  conftest.py  dummy_file.txt  pyproject.toml  setup.py  version.py  version_utils.py
keras_nlp/api/: __init__.py
keras_nlp/applications/: __init__.py  bert.py
keras_nlp/backend/: __init__.py  config.py  keras.py  keras2.py  ops.py  random.py
keras_nlp/benchmarks/: README.md  glue.py  glue_test.py  sentiment_analysis.py  text_generation.py  text_generation_config.py
keras_nlp/encoders/: __init__.py  bert_encoder.py  bert_encoder_test.py
keras_nlp/evaluations/: glue.py
keras_nlp/integration_tests/: basic_usage_test.py  import_test.py
keras_nlp/keras_nlp/: __init__.py
keras_nlp/layers/: __init__.py  bert_packer.py  bert_packer_test.py  cached_multi_head_attention.py  cached_multi_head_attention_test.py  cached_multi_head_cross_attention.py  deberta_encoder.py  disentangled_attention.py  disentangled_self_attention.py  f_net_encoder.py  f_net_encoder_test.py  falcon_attention.py  falcon_decoder.py  falcon_mlp.py  flash_attention.py  fnet_encoder.py  fnet_encoder_test.py  masked_lm_head.py  masked_lm_head_test.py  masked_lm_mask_generator.py  masked_lm_mask_generator_test.py  mlm_classification_head.py  mlm_classification_head_test.py  mlm_head.py  mlm_head_test.py  mlm_mask_generator.py  mlm_mask_generator_test.py  multi_query_attention.py  multi_segment_packer.py  multi_segment_packer_test.py  on_device_embedding_test.py  position_embedding.py  position_embedding_test.py  random_deletion.py  random_deletion_test.py  random_insertion.py  random_insertion_test.py  random_replacement.py  random_replacement_test.py  random_swap.py  (+23 more)
keras_nlp/metrics/: __init__.py  bleu.py  bleu_test.py  edit_distance.py  edit_distance_test.py  ngram_utils.py  perplexity.py  perplexity_test.py  rouge.py  rouge_base.py  rouge_l.py  rouge_l_test.py  rouge_n.py  rouge_n_test.py  rouge_test.py  utils.py
keras_nlp/models/: MODEL_CONTRIBUTION.md  MODEL_CONTRIBUTION_GUIDE.md  __init__.py  backbone.py  backbone_test.py  base.py  bert.py  bert_tasks.py  bert_tasks_test.py  bert_test.py  causal_lm.py  classifier.py  generative_task.py  gpt2.py  gpt2_test.py  lora.py  masked_lm.py  preprocessor.py  preprocessor_test.py  roberta.py  roberta_test.py  seq_2_seq_lm.py  task.py  task_test.py  utils.py  xlm_roberta.py
keras_nlp/network_tests/: test_load_ckpts.py
keras_nlp/preprocessing/: __init__.py  lm_mask.py  lm_mask_test.py  mlm_mask_generator.py  mlm_mask_generator_test.py  mlm_masker.py  mlm_masker_test.py
keras_nlp/samplers/: __init__.py  beam_sampler.py  beam_sampler_test.py  greedy.py  (+19 more)
(+3372 files in other folders)
